[desktop-app] Moved image loading in new `/desktop-app/art-reader/` folder
	This folder will contain logic to load artworks.

--- a/desktop-app/meson.build
+++ b/desktop-app/meson.build
@@ -13,6 +13,7 @@ deskapp_deps = [
 ]
 deskapp_srcs = [
 	'config.cpp',
+	'art-reader/image.cpp',
 	'db/account.cpp',
 	'db/artwork.cpp',
 	'db/artwork-loader.cpp',
