[desktop-app] Remade Arcollect::gui::artwork_collection and moved it into Arcollect::db namespace
	One of the oldest design has been replaced with something less overkill (but still a *little bit* for now...)

--- a/desktop-app/meson.build
+++ b/desktop-app/meson.build
@@ -18,6 +18,7 @@ deskapp_srcs = [
 	'db/artwork.cpp',
 	'db/artwork-loader.cpp',
 	'db/db.cpp',
+	'db/artwork-collection.cpp',
 	'db/filter.cpp',
 	'db/search.cpp',
 	'gui/about.cpp',
