[desktop-app] Made art-reader/text.hpp

--- a/desktop-app/tests/meson.build
+++ b/desktop-app/tests/meson.build
@@ -6,6 +6,7 @@ desktop_app_test_env = environment({
 tap_tests = [
 	'test-config',
 	'test-search-tokenizer',
+	'test-mime-extract-charset',
 ]
 
 foreach test: tap_tests
