[desktop-app] Move text scrolling code in desktop-app/gui/scrolling-text.?pp
	It will be reused in another places

--- a/desktop-app/meson.build
+++ b/desktop-app/meson.build
@@ -30,6 +30,7 @@ deskapp_srcs = [
 	'gui/menu.cpp',
 	'gui/modal.cpp',
 	'gui/rating-selector.cpp',
+	'gui/scrolling-text.cpp',
 	'gui/search-osd.cpp',
 	'gui/slideshow.cpp',
 	'gui/view-slideshow.cpp',
