[meson.build] Made a dependency embeding report for end-user informations
	This is more fair and transparent about what I redistribute.

--- a/meson.build
+++ b/meson.build
@@ -63,7 +63,7 @@ config_h.set('ARCOLLECT_DBUS_PATH','/')
 
 # Version requirements
 # These are centralized here. Update README.md if you change things there.
-config_h.set('ARCOLLECT_VERREQ_sdl2','>=2.0.8')
+#config_h.set('ARCOLLECT_VERREQ_sdl2','>=2.0.x') # TODO Switch back to an SDL release when the ICC profile patch get released
 config_h.set('ARCOLLECT_VERREQ_sqlite3','>=3.35.0')
 
 foreach key: config_h.keys()
@@ -105,6 +105,117 @@ if enable_native_progs
 	])
 	dep_rapidjson = dependency('rapidjson')
 endif
+
+# Track dependencies
+# It's important to clearly state what is embeded
+system_dependencies = []
+static_dependencies = []
+if enable_native_progs
+	# TODO Add sdl2 when no longer using a special branch
+	native_progs_deps = [
+		'freetype2',
+		'harfbuzz',
+		'lcms2',
+		'libcurl',
+		'OpenImageIO',
+		'rapidjson',
+		'sdl2',
+		'sqlite3',
+	]
+	if with_xdg
+		native_progs_deps += 'dbus-1'
+	endif
+	foreach dep_name: native_progs_deps
+		dep = dependency(dep_name, required: false)
+		if dep.found()
+			if dep.type_name() == 'internal'
+				static_dependencies += dep_name
+			else
+				system_dependencies += dep_name
+			endif
+		endif
+	endforeach
+endif
+
+# TODO if 'OpenImageIO' in static_dependencies
+#endif
+
+if (host_machine.system() == 'windows') and (system_dependencies.length() > 0)
+	deps = static_dependencies+system_dependencies
+	warning('You are linking to DLLs!. You should reconfigure with --force-fallback-for='+','.join(deps))
+endif
+
+foreach dep: system_dependencies
+	summary(dep,true , section: 'Using system dependencies (NO if embeded)', bool_yn: true)
+endforeach
+foreach dep: static_dependencies
+	summary(dep,false, section: 'Using system dependencies (NO if embeded)', bool_yn: true)
+endforeach
+
+# Generate dependencies informations
+dep_fancy_name = {
+	'base64'           : 'Base64.h',
+	'dbus-1'           : 'D-Bus',
+	'freetype2'        : 'FreeType2',
+	'harfbuzz'         : 'HarfBuzz',
+	'inih'             : 'INIReader',
+	'lcms2'            : 'LittleCMS',
+	'libcurl'             : 'curl',
+	'OpenImageIO'      : 'OpenImageIO',
+	'rapidjson'        : 'RapidJSON',
+	'roboto'           : 'Roboto',
+	'sdl2'             : 'SDL',
+	'sqlite3'          : 'SQLite',
+}
+dep_website = {
+	'base64'           : 'https://gist.github.com/tomykaira/f0fd86b6c73063283afe550bc5d77594',
+	'dbus-1'           : 'https://www.freedesktop.org/wiki/Software/dbus/',
+	'freetype2'        : 'https://www.freetype.org',
+	'harfbuzz'         : 'https://harfbuzz.github.io/',
+	'inih'             : 'https://github.com/benhoyt/inih',
+	'lcms2'            : 'https://littlecms.com/',
+	'libcurl'             : 'https://curl.se/',
+	'OpenImageIO'      : 'https://openimageio.readthedocs.org/',
+	'rapidjson'        : 'https://rapidjson.org/',
+	'roboto'           : 'https://fonts.google.com/specimen/Roboto',
+	'sdl2'             : 'https://www.libsdl.org/',
+	'sqlite3'          : 'https://www.sqlite.org/',
+}
+
+# TODO Get version of these
+also_embeded = [
+	'base64',
+	'roboto',
+]
+
+if (static_dependencies.length() + also_embeded.length() > 0)
+	about_embeded_dependencies = []
+	last_embeded_dependencies = ''
+	foreach dep: static_dependencies
+		if last_embeded_dependencies != ''
+			about_embeded_dependencies += last_embeded_dependencies
+		endif
+		last_embeded_dependencies = dep_fancy_name[dep]+' '+dependency(dep).version()+' ('+dep_website[dep]+')'
+	endforeach
+	foreach dep: also_embeded
+		if last_embeded_dependencies != ''
+			about_embeded_dependencies += last_embeded_dependencies
+		endif
+		last_embeded_dependencies = dep_fancy_name[dep]+' ('+dep_website[dep]+')'
+	endforeach
+	if ('OpenImageIO' in static_dependencies)
+		if last_embeded_dependencies != ''
+			about_embeded_dependencies += last_embeded_dependencies
+		endif
+		last_embeded_dependencies = 'TODO: Dependencies of OpenImageIO (checkout the source code for now)'
+	endif
+	about_embeded_dependencies = ', '.join(about_embeded_dependencies) + ' and ' + last_embeded_dependencies
+	message('This copy of Arcollect will embed copies of '+about_embeded_dependencies)
+endif
+
+dependency_report_data = configuration_data()
+dependency_report_data.set_quoted('ABOUT_EMBEDED_DEPENDENCIES_STR',about_embeded_dependencies.replace('\n','\\n'))
+dependency_report_hpp = configure_file(output: 'dependency-report.hpp', configuration: dependency_report_data)
 
 # Add subdir (include order is important !)
 if enable_native_progs
