Upgraded to CURL 7.79.0

--- a/subprojects/libcurl/meson.build
+++ b/subprojects/libcurl/meson.build
@@ -1,5 +1,5 @@
 # Thin wrapper around the CMake project
-project('CURL', 'c', version: '7.78.0')
+project('CURL', 'c')
 
 cc = meson.get_compiler('c')
 cmake = import('cmake')
@@ -35,4 +35,4 @@ endif
 subproj_opts.set_install(false)
 subproj_curl = cmake.subproject('libcurl-cmake', options: subproj_opts)
 dep_curl_cmake = subproj_curl.dependency('libcurl')
-meson.override_dependency('libcurl',declare_dependency(dependencies: [dep_curl_cmake,dep_curl], version: meson.project_version()))
+meson.override_dependency('libcurl',declare_dependency(dependencies: [dep_curl_cmake,dep_curl], version: '7.79.0'))
