[desktop-app] Begin to remake sorting handling
	The redesign will allow a more flexible sorting system.

--- a/desktop-app/meson.build
+++ b/desktop-app/meson.build
@@ -22,6 +22,7 @@ deskapp_srcs = [
 	'db/artwork-collection.cpp',
 	'db/filter.cpp',
 	'db/search.cpp',
+	'db/sorting.cpp',
 	'gui/about.cpp',
 	'gui/artwork-viewport.cpp',
 	'gui/first-run.cpp',
