Remade subprojects/.gitgnore
	It's now usable.

--- a/subprojects/.gitignore
+++ b/subprojects/.gitignore
@@ -1,20 +1,17 @@
-curl-*
-fmt-8.0.1
-freetype-*
-harfbuzz-*
-Imath-3.0.5
-inih-r53
-libjpeg-*
-libpng-*
-mingw-std-threads-1.0.0
-oiio-2.2.17.0
-packagecache
-rapidjson-*
-robin-map-0.6.3
-roboto-*
-SDL2-*
-SDL2_image-2.0.5
-SDL2_ttf-*
-sqlite-amalgamation-*
-tiff-*
-zlib-*
+/curl-*
+/fmt-*
+/freetype-*
+/harfbuzz-*
+/Imath-*
+/inih-*
+/libjpeg-*
+/libpng-*
+/oiio-*
+/packagecache
+/rapidjson-*
+/robin-map-*
+/roboto-*
+/SDL*
+/sqlite-amalgamation-*
+/tiff-*
+/zlib-*
