--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         uses: BSFishy/meson-build@v1.0.3
         with:
           action: build
-          setup-options: --force-fallback-for libcurl,sdl2,freetype2,harfbuzz,sqlite3,INIReader,freetype2,libjpeg,libpng,libtiff-4,zlib
+          setup-options: --force-fallback-for libcurl,sdl2,freetype2,harfbuzz,sqlite3,INIReader,libjpeg,libpng,libtiff-4,zlib
           meson-version: 0.59.0
       - name: Test project
         uses: BSFishy/meson-build@v1.0.3
@@ -147,7 +147,7 @@ jobs:
       - name: Install Meson
         run: pip install meson ninja
       - name: Configure project
-        run: meson build --force-fallback-for=freetype2,fmt,bzip2,giflib,libpng,Imath,inih,lcms2,libcurl,libjpeg,libtiff,OpenImageIO,rapidjson,robin-map,roboto,sdl2,freetype2,harfbuzz,sqlite3 -Dcpp_link_args=-static -Dc_link_args=-static # TODO Make it works on Windows
+        run: meson build --force-fallback-for=freetype2,fmt,bzip2,giflib,libpng,Imath,inih,lcms2,libcurl,libjpeg,libtiff,OpenImageIO,rapidjson,robin-map,roboto,sdl2,harfbuzz,sqlite3 -Dcpp_link_args=-static -Dc_link_args=-static # TODO Make it works on Windows
       - name: Build project
         run: ninja -C build
       - name: Generate MSI
