Removed version numbers in subprojects/packagefiles

--- a/subprojects/packagefiles/zlib/meson.build
+++ b/subprojects/packagefiles/zlib/meson.build
@@ -49,7 +49,7 @@ zlib = library('z', src,
   c_args : compile_args,
   link_args : link_args,
   vs_module_defs : 'win32/zlib.def',
-  install : true)
+  install : false)
 
 incdir = include_directories('.')
 
