[webext-adder tests] Generate webext-adder's payload on-disk
	This allow an easier debugging of the webext-adder since we can directly feed him with these payloads

--- a/webext-adder/tests/meson.build
+++ b/webext-adder/tests/meson.build
@@ -17,13 +17,18 @@ tests_env = environment({
 tests_deps = [
 	webext_adder_exe,
 ]
+
+# Generate payloads externally (useful to test the adder in gdb)
+make_test_payload_prog = find_program('make_test_payload.py')
+#offline_tests_payload = custom_target('webext-adder-offline-test-payload', output: 'offline-payload', command: [make_test_payload_prog, offline_tests], build_by_default: false, capture: true)
+online_tests_payload = custom_target('webext-adder-online-test-payload', output: 'online-payload', command: [make_test_payload_prog, online_tests], build_by_default: false, capture: true)
+online_nsfw_tests_payload = custom_target('webext-adder-online-nsfw-test-payload', output: 'online-nsfw-payload', command: [make_test_payload_prog, online_nsfw_tests], build_by_default: false, capture: true)
+
 webext_adder_test_prog = find_program('webext-adder-test.py')
-
-#test('webext-adder-offline',webext_adder_test_prog, args: [meson.current_build_dir()/'tests-offline', offline_tests], env: tests_env, depends: webext_adder_exe, protocol: 'tap', timeout: 600)
-
+#test('webext-adder-offline',webext_adder_test_prog, args: [meson.current_build_dir()/'tests-offline', offline_tests_payload, offline_tests], env: tests_env, depends: webext_adder_exe, protocol: 'tap', timeout: 600)
 if get_option('tests_online')
-	test('webext-adder-online',webext_adder_test_prog, args: [meson.current_build_dir()/'tests-online', online_tests], env: tests_env, depends: webext_adder_exe, protocol: 'tap', timeout: 600)
+	test('webext-adder-online',webext_adder_test_prog, args: [meson.current_build_dir()/'tests-online', online_tests_payload, online_tests], env: tests_env, depends: webext_adder_exe, protocol: 'tap', timeout: 600)
 	if get_option('tests_nsfw')
-		test('webext-adder-online-nsfw',webext_adder_test_prog, args: [meson.current_build_dir()/'tests-online-nsfw', online_nsfw_tests], env: tests_env, depends: webext_adder_exe, protocol: 'tap', timeout: 600)
+		test('webext-adder-online-nsfw',webext_adder_test_prog, args: [meson.current_build_dir()/'tests-online-nsfw', online_nsfw_tests_payload, online_nsfw_tests], env: tests_env, depends: webext_adder_exe, protocol: 'tap', timeout: 600)
 	endif
 endif
