--- a/desktop-app/meson.build
+++ b/desktop-app/meson.build
@@ -25,6 +25,7 @@ deskapp_srcs = [
 	'db/sorting.cpp',
 	'gui/about.cpp',
 	'gui/artwork-viewport.cpp',
+	'gui/edit-art.cpp',
 	'gui/first-run.cpp',
 	'gui/font.cpp',
 	'gui/main.cpp',
