--- a/subprojects/packagefiles/sqlite/meson.build
+++ b/subprojects/packagefiles/sqlite/meson.build
@@ -7,14 +7,42 @@ dl_dep = cc.find_library('dl', required : false)
 m_dep = cc.find_library('m', required: false)
 
 sqlite_args = [
+	'-DSQLITE_DEFAULT_FILE_PERMISSIONS=0600',
 	'-DSQLITE_DEFAULT_MEMSTATUS=0',
 	'-DSQLITE_LIKE_DOESNT_MATCH_BLOBS',
 	'-DSQLITE_MAX_EXPR_DEPTH=0',
-	'-DSQLITE_OMIT_DEPRECATED',
-	'-DSQLITE_OMIT_PROGRESS_CALLBACK',
-	'-DSQLITE_OMIT_SHARED_CACHE',
-	'-DSQLITE_USE_ALLOCA',
+	'-DSQLITE_OMIT_AUTHORIZATION',
+	'-DSQLITE_OMIT_AUTOINCREMENT',
 	'-DSQLITE_OMIT_AUTOINIT',
+	'-DSQLITE_OMIT_AUTORESET',
+	'-DSQLITE_OMIT_AUTOVACUUM',
+	'-DSQLITE_OMIT_BLOB_LITERAL',
+	'-DSQLITE_OMIT_CASE_SENSITIVE_LIKE_PRAGMA',
+	'-DSQLITE_OMIT_CHECK',
+	'-DSQLITE_OMIT_COMPILEOPTION_DIAGS',
+	'-DSQLITE_OMIT_COMPLETE',
+	'-DSQLITE_OMIT_DECLTYPE',
+	'-DSQLITE_OMIT_DEPRECATED',
+	'-DSQLITE_OMIT_DESERIALIZE',
+	'-DSQLITE_OMIT_EXPLAIN',
+	'-DSQLITE_OMIT_GET_TABLE',
+	'-DSQLITE_OMIT_HEX_INTEGER',
+	'-DSQLITE_OMIT_INCRBLOB',
+	'-DSQLITE_OMIT_INTEGRITY_CHECK',
+	'-DSQLITE_OMIT_INTROSPECTION_PRAGMAS',
+	'-DSQLITE_OMIT_LOAD_EXTENSION',
+	'-DSQLITE_OMIT_LOCALTIME',
+	'-DSQLITE_OMIT_MEMORYDB',
+	'-DSQLITE_OMIT_PROGRESS_CALLBACK',
+	'-DSQLITE_OMIT_SCHEMA_PRAGMAS',
+	'-DSQLITE_OMIT_SCHEMA_VERSION_PRAGMAS',
+	'-DSQLITE_OMIT_SHARED_CACHE',
+	'-DSQLITE_OMIT_TCL_VARIABLE',
+	'-DSQLITE_OMIT_TEMPDB',
+	'-DSQLITE_OMIT_TRACE',
+	'-DSQLITE_OMIT_UTF16',
+	'-DSQLITE_USE_ALLOCA',
+	'-DSQLITE_THREADSAFE=0',
 ]
 sqlite3_incdir = include_directories('.')
 dep_sqlite3 = declare_dependency(link_with:
