Fixed Boost inclusion in OpenImageIO Meson wrap

--- a/meson.build
+++ b/meson.build
@@ -172,8 +172,8 @@ dep_website = {
 	'harfbuzz'         : 'https://harfbuzz.github.io/',
 	'inih'             : 'https://github.com/benhoyt/inih',
 	'lcms2'            : 'https://littlecms.com/',
-	'libcurl'             : 'https://curl.se/',
-	'OpenImageIO'      : 'https://openimageio.readthedocs.org/',
+	'libcurl'          : 'https://curl.se/',
+	'OpenImageIO'      : 'https://openimageio.org',
 	'roboto'           : 'https://fonts.google.com/specimen/Roboto',
 	'sdl2'             : 'https://www.libsdl.org/',
 	'sqlite3'          : 'https://www.sqlite.org/',
