--- a/desktop-app/xdg/gnome-shell-search-provider.ini
+++ b/desktop-app/xdg/gnome-shell-search-provider.ini
@@ -1,5 +1,5 @@
 [Shell Search Provider]
-DesktopId=arcollect.desktop
+DesktopId=@ARCOLLECT_DBUS_NAME@.desktop
 BusName=@ARCOLLECT_DBUS_NAME@
 ObjectPath=@ARCOLLECT_DBUS_PATH@
 Version=2
