[XDG desktop-app] Now configure the .desktop file
	Also moved XDG Categories in the meson.build file

--- a/desktop-app/xdg/me.d_spirits.arcollect.desktop
+++ b/desktop-app/xdg/me.d_spirits.arcollect.desktop
@@ -2,7 +2,7 @@
 Type=Application
 Version=1.1
 Name=Arcollect
-Comment=Your personal visual artwork library.
+Comment=@ARCOLLECT_SUMMARY@
 DBusActivatable=true
 Exec=arcollect
 Terminal=false
