--- a/webext-adder/meson.build
+++ b/webext-adder/meson.build
@@ -6,6 +6,7 @@ webext_adder_deps = [
 ]
 webext_adder_srcs = [
 	'adder.cpp',
+	'download.cpp',
 	'main.cpp',
 	db_schema_sources_target[1], # for <arcollect-sqls.hpp>
 ]
