--- a/subprojects/.gitignore
+++ b/subprojects/.gitignore
@@ -3,6 +3,7 @@
 /curl-*
 /fmt-*
 /freetype-*
+/giflib-*
 /harfbuzz-*
 /Imath-*
 /inih-*
@@ -10,6 +11,7 @@
 /libjpeg-*
 /libpng-*
 /oiio-*
+/openjpeg-*
 /packagecache
 /robin-map-*
 /roboto-*
