[XDG desktop-app] Set a WM class for the desktop-app (arcollect-desktop-app)

--- a/desktop-app/xdg/me.d_spirits.arcollect.desktop
+++ b/desktop-app/xdg/me.d_spirits.arcollect.desktop
@@ -7,3 +7,4 @@ DBusActivatable=true
 Exec=arcollect
 Terminal=false
 Categories=Graphics;2DGraphics;Amusement;RasterGraphics;Viewer
+StartupWMClass=@ARCOLLECT_X11_WM_CLASS@
